added a background color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet"href="trial.css">
         <h1> ELIZABETH</h1>
   </head>
-    <body>
+    <body style="background-color: aquamarine;">
         <nav class="navbar">
           <ul class="nav-links">
             <li><a href="index.html">home</a></li>
